# self-cleaning-cat-litter-box

./: README.md
Document/Hi3861鸿蒙开发板/其他参考/: Readme.txt
Document/Hi3861鸿蒙开发板/官方文档/Hi3861V100R001C00SPC024/en/: Hi3861V100R001C00SPC024 Virus Scan Report.doc
Document/Hi3861鸿蒙开发板/官方文档/Hi3861V100R001C00SPC024/en/02.Software/: Hi3861 V100／Hi3861L V100 API Development Reference.chm  Hi3861 V100／Hi3861L V100 Boot API Development Reference.chm
Document/Hi3861鸿蒙开发板/官方文档/Hi3861V100R001C00SPC024/zh/: Hi3861V100R001 open source notice.doc  Hi3861V100R001C00SPC024 交付件清单.xlsx  Hi3861V100R001C00SPC024 版本描述文件.doc
Document/Hi3861鸿蒙开发板/官方文档/Hi3861V100R001C00SPC024/zh/02.Software/: Hi3861V100／Hi3861LV100 API 开发参考.chm  Hi3861V100／Hi3861LV100 Boot API 开发参考.chm
Document/Hi3861鸿蒙开发板/开发板简介/: 测试说明.doc  艾尔赛Hi3861开发板.doc
Document/Hi3861鸿蒙开发板/测试固件/LED灯闪烁/: readme.txt
Document/Hi3861鸿蒙开发板/测试固件/串口输出/: readme.txt
Moudle/arduino/: README.md
Moudle/hi3861/: BUILD.gn  README.md  appEntrance.c  appEntrance.h
Moudle/hi3861/3861_button/: 3861_button.c  3861_button.h
Moudle/hi3861/network/: network_manage.c  network_manage.h  wifi_ap.c  wifi_sta.c
Moudle/hi3861/server_commuincation/: server_commuincation.h  server_communication.c
Moudle/hi3861/stepping_motor/: stepping_motor.c  stepping_motor.h
Moudle/hi3861/uart_to_esp32cam/: uart_to_esp32cam.c  uart_to_esp32cam.h
